# claimdesk

./: .gitignore  CLAUDE.md  README.md  claimdesk-one-day-plan.md  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  turbo.json
app/: globals.css  layout.tsx
apps/ai/: .dockerignore  Dockerfile  openapi.json  package.json  pyproject.toml
apps/ai/app/: config.py  constants.py  deps.py  errors.py  main.py  observability.py
apps/ai/app/routers/: coverage.py  qa.py
apps/ai/app/schemas/: coverage.py  qa.py
apps/ai/app/services/: anthropic.py  bm25.py  coverage_agent.py  embeddings.py  injection.py  input_limits.py  qa_pipeline.py  supabase_client.py  verify.py
apps/ai/eval/: coverage-eval-results-guarded-adr011.md  coverage-eval-results.md  coverage-topk-ablation-results.md  golden-coverage.json  run_coverage_eval.py  run_coverage_topk_ablation.py
apps/ai/scripts/: dump_openapi.py  get_test_ids.py  prove_coverage_opinions_rls.py  run-python.mjs
apps/ai/tests/: conftest.py  test_bm25_parity.py  test_injection_and_input.py  test_verify_parity.py
components/: app-header.tsx  claim-type-badge.tsx  demo-banner.tsx  ingest-status-badge.tsx  key-deadlines-card.tsx  low-confidence-ingest-badge.tsx  status-pill.tsx
docs/: claimdesk-act-three-build-log.md  claimdesk-phase-2-kickoff-brief.md  phase-2-progress.md
eval/: env.ts  golden.json  lab-types.ts  results.md  results.tree.md  run-eval.ts  scoring.ts  transcripts.md
lib/: deadlines.ts  demo.ts  embeddings.ts  retrieval-config.ts
scripts/: build-toc-tree.ts
types/: database.ts  toc.ts
(+158 files in other folders)
